@@ -1,10 +1,11 @@
 package licaza.etiya.core.repository.dynamo;
 
-import java.util.HashMap;
+import static licaza.etiya.core.repository.dynamo.TableSchemaFactory.GYM_PK;
+import static licaza.etiya.core.repository.dynamo.TableSchemaFactory.GYM_SK_PREFIX;
+import static licaza.etiya.core.repository.dynamo.TableSchemaFactory.PK;
+
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import licaza.etiya.core.model.Gym;
 import licaza.etiya.core.repository.GymRepository;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -13,11 +14,20 @@ import org.springframework.stereotype.Repository;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbEnhancedClient;
 import software.amazon.awssdk.enhanced.dynamodb.DynamoDbTable;
 import software.amazon.awssdk.enhanced.dynamodb.Expression;
-import software.amazon.awssdk.enhanced.dynamodb.model.ScanEnhancedRequest;
-import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
+import software.amazon.awssdk.enhanced.dynamodb.Key;
+import software.amazon.awssdk.enhanced.dynamodb.model.PutItemEnhancedRequest;
+import software.amazon.awssdk.enhanced.dynamodb.model.QueryConditional;
+import software.amazon.awssdk.services.dynamodb.model.ConditionalCheckFailedException;
 
 @Repository
 public class DynamoGymRepository implements GymRepository {
+
+  // Checked atomically by DynamoDB, so two concurrent creations can't both succeed
+  private static final Expression GYM_DOES_NOT_EXIST =
+      Expression.builder()
+          .expression("attribute_not_exists(#pk)")
+          .putExpressionName("#pk", PK)
+          .build();
 
   private final DynamoDbTable<Gym> table;
 
@@ -27,47 +37,43 @@ public class DynamoGymRepository implements GymRepository {
     this.table = enhancedClient.table(tableName, TableSchemaFactory.createGymSchema());
   }
 
-  public void save(Gym gym) {
-    // Add 'gym' prefix to ID
-    if (!gym.getId().startsWith("gym-")) {
-      gym.setId("gym-" + gym.getId());
+  @Override
+  public boolean create(Gym gym) {
+    try {
+      table.putItem(
+          PutItemEnhancedRequest.builder(Gym.class)
+              .item(gym)
+              .conditionExpression(GYM_DOES_NOT_EXIST)
+              .build());
+      return true;
+    } catch (ConditionalCheckFailedException ex) {
+      return false;
     }
-    table.putItem(gym);
   }
 
-  public List<Gym> searchByName(String query) {
-    String searchKey = "gym-" + query.toLowerCase().replaceAll("\\s+", "-");
+  @Override
+  public List<Gym> findBySlugPrefix(String slugPrefix) {
+    Key key = Key.builder().partitionValue(GYM_PK).sortValue(GYM_SK_PREFIX + slugPrefix).build();
 
-    Map<String, AttributeValue> expressionValues = new HashMap<>();
-    expressionValues.put(":prefix", AttributeValue.builder().s(searchKey).build());
-
-    Expression filterExpression =
-        Expression.builder()
-            .expression("begins_with(id, :prefix)")
-            .expressionValues(expressionValues)
-            .build();
-
-    ScanEnhancedRequest scanRequest =
-        ScanEnhancedRequest.builder().filterExpression(filterExpression).build();
-
-    return table.scan(scanRequest).items().stream().collect(Collectors.toList());
+    return table
+        .query(r -> r.queryConditional(QueryConditional.sortBeginsWith(key)))
+        .items()
+        .stream()
+        .toList();
   }
 
   @Override
   public List<Gym> findAll() {
-    return table.scan().items().stream()
-        .filter(g -> g.getId().startsWith("gym-"))
-        .collect(Collectors.toList());
+    Key key = Key.builder().partitionValue(GYM_PK).build();
+
+    return table.query(r -> r.queryConditional(QueryConditional.keyEqualTo(key))).items().stream()
+        .toList();
   }
 
   @Override
   public Optional<Gym> findById(String id) {
-    // We add 'gym-' prefix, in case is not present
-    String finalId = id.startsWith("gym-") ? id : "gym-" + id;
+    Key key = Key.builder().partitionValue(GYM_PK).sortValue(GYM_SK_PREFIX + id).build();
 
-    // Get item using partition key
-    Gym gym = table.getItem(r -> r.key(k -> k.partitionValue(finalId)));
-
-    return Optional.ofNullable(gym);
+    return Optional.ofNullable(table.getItem(key));
   }
 }
